--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@
 .edit,
 .delete {
   padding: 0px 6px;
-  border-radius: 2px;
+  border-radius: 4px;
 }
 
 .edit {
@@ -67,7 +67,7 @@ table {
 }
 
 .App-header {
-  background-color: #2151b2;
+  background-color: #1855cf;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
